# mprocs

./: .gitignore  .gitmodules  .ocamlformat  CHANGELOG.md  Cargo.toml  Dockerfile.linux64  LICENSE  Makefile  README.md  dist-workspace.toml  dune  dune-project  mprocs.opam  release.cmd  release.sh  rustfmt.toml  scoop.json
.cargo/: config
.github/workflows/: ci.yml  head.yml  release.yml
docs/bugs/: 2026-05-11-csi-log-spam.md  2026-05-11-hang-on-terminal-backpressure.md  2026-05-11-orphaned-children-on-terminal-close.md
docs/superpowers/plans/: 2026-05-11-fix-hang-and-orphans.md
helpers/print-key/: Cargo.toml  main.rs
img/: mprocs.yaml  update.lua  update.sh
npm/: README.md  cli.js  index.js  package.json  release.sh
pty/: conpty.c  conpty.ml  dune  pty.c  pty.ml  pty.mli
pty/config/: discover.ml
rust/: app.rs  config.rs  encode_term.rs  event.rs  keymap.rs  main.rs  proc.rs  state.rs  theme.rs  ui_keymap.rs  ui_procs.rs  ui_term.rs
schemas/: mprocs.json
scoop/: mprocs.json
scripts/: _build-linux.sh  build-darwin-aarch64.sh  build-darwin-x86_64.sh  build-linux-aarch64.sh  build-linux-x86_64.sh  build-linux64-musl-entrypoint.sh  build-linux64-musl.sh  build-unix.sh  build-windows-x86_64.cmd  release-scoop.sh  update-readme.sh  version.sh
src/: Cargo.toml  app.rs  attach_client.rs  cfg.rs  cli.ml  client.rs  clipboard.rs  cmd.ml  config.ml  config.rs  config_lua.rs  ctl.rs  decl.ml  dekit.rs  dispose.ml  dk_app.rs  dune  encode_term.rs  engine.ml  error.rs  event.rs  help_ui.ml  inc.ml  just.rs  key.rs  keymap.ml  keymap.rs  lib.rs  listeners.ml  log.ml  logging.rs  main.ml  main.rs  mouse.rs  mprocs.ml  mprocs.rs  nottui_main.ml  package_json.rs  pane_ui.ml  parse_shell.rs  (+35 more)
src/config/: config.rs  hook.rs  keymap.rs  legacy.rs  log.rs  mod.rs  proc.rs  proc_log.rs  tui.rs
src/console/: action.rs  app.rs  app_client.rs  app_layout.rs  client_task.rs  console.rs  keymap.rs  layout.rs  mod.rs  server_message.rs  state.rs  ui_keymap.rs  ui_procs.rs  ui_term.rs  ui_zoom_tip.rs
src/console/modal/: add_proc.rs  commands_menu.rs  modal.rs  quit.rs  remove_proc.rs  rename_proc.rs
src/console/modals/: modal.rs  quit_modal.rs
src/console/proc/: mod.rs  view.rs
src/console/views/: pane.rs  procs.rs
src/console/widgets/: mod.rs  text_input.rs
src/daemon/: daemon.rs  lockfile.rs  mod.rs  receiver.rs  socket.rs  spawn.rs
src/dekit/: main.rs  mod.rs  rpc_client.rs  server.rs
src/dk_screen/: attrs.rs  cell.rs  mod.rs
src/host/: daemon.rs  mod.rs  receiver.rs  sender.rs  socket.rs
src/ipc/: mod.rs  receiver.rs  sender.rs
src/js/: js_vm.rs  mod.rs  rquickjs_ext.rs
src/js/lib/: dk.d.ts  env.rs  fs.rs  log.rs  mod.rs  path.rs  process.rs  std.d.ts  tui.rs
src/kernel/: copy_mode.rs  kernel.rs  kernel_message.rs  mod.rs  namespace.rs  path_trie.rs  proc.rs  sub_trie.rs  task.rs  task_path.rs  task_screen.rs
src/kernel2/: kernel.rs  kernel_message.rs  proc.rs
src/lualib/: cli.rs  dbg.rs  fs.rs  mod.rs  os.rs
src/modal/: add_proc.rs  commands_menu.rs  finish.rs  mod.rs  modal.rs  quit.rs  remove_proc.rs  rename_proc.rs
src/mprocs/: app.rs  app_client.rs  app_layout.rs  config.rs  config_lua.rs  ctl.rs  event.rs  just.rs  keymap.rs  mod.rs  mprocs.rs  package_json.rs  proc_log_config.rs  settings.rs  state.rs  ui_keymap.rs  ui_procs.rs  ui_term.rs  ui_zoom_tip.rs  yaml_val.rs
src/mprocs/modal/: add_proc.rs  commands_menu.rs  mod.rs  modal.rs  quit.rs  remove_proc.rs  rename_proc.rs
src/mprocs/proc/: inst.rs  mod.rs  msg.rs  proc.rs  view.rs
src/proc/: handle.rs  inst.rs  mod.rs  msg.rs  proc.rs  view.rs
src/process/: mod.rs  process.rs  process_spec.rs  unix_process.rs  unix_processes_waiter.rs  win_process.rs
src/protocol/: attach.rs  conn.rs  ctl.rs  mod.rs  rpc.rs  wire.rs
src/server/: mod.rs  server_message.rs
src/task/: logger.rs  mod.rs  proc_task.rs
src/term/: ansi.rs  attrs.rs  cell.rs  color.rs  common.rs  encode.rs  event.rs  grid.rs  input_parser.rs  internal.rs  key.rs  line_symbols.rs  mod.rs  mouse.rs  parser.rs  row.rs  screen.rs  screen_differ.rs  term_driver.rs  windows.rs
src/term_driver/: input_parser.rs  internal.rs  mod.rs  windows.rs
src/term_types/: mod.rs  winsize.rs
src/tests/: hang_on_backpressure.rs
src/vt100/: attrs.rs  cell.rs  grid.rs  mod.rs  parser.rs  row.rs  screen.rs  screen_differ.rs  size.rs  term.rs  term_reply.rs
src/widgets/: list.rs  mod.rs  text_input.rs
tests/: tests.lua
tui/: Cargo.toml  c.ml  cargo-config.toml  conv.rs  dune  event.ml  event.rs  events.ml  events.rs  layout.ml  layout.rs  lib.rs  lwt.c  main.rs  rect.ml  render.ml  render.rs  render_widget.rs  style.ml  style.rs  terminal.ml  terminal.rs  tui.ml  types.ml
tui/cfuncs/: bindgen.ml  bindings.ml  dune  funcs.h
tui/ctypes/: dune  types.h  types.ml  types.rs  types_bindings.ml
tui/ctypes/gen-stubs/: dune  types_c_gen.ml
tui/gen-tool/: defs.ml  dune  fmt.ml  gen_tool.ml  ir.ml  lang_c.ml  lang_ml.ml  lang_rust.ml
tui/gen-types2/: dune  types.h  types_bindings.ml  types_c_gen.ml
vterm/: bindings.c  dune  vterm.ml  vterm.mli
vterm/libvterm/: Makefile
vterm/libvterm/include/: vterm.h
vterm/libvterm/src/: parser.c  state.c  vterm.c  vterm_internal.h
vterm/libvterm/t/: harness.c  run-test.pl
