[package]
name = "mprocs"
description = "Run multiple processes in parallel and see output"
version = "0.2.1"
edition = "2021"
license = "MIT"

include = ["/src", "/vendor"]

[profile.release]
strip = "symbols"
opt-level = "z" # optimize for binary size
lto = true # link time optimization
panic = "abort"
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mprocs"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.44"
assert_matches = "1.5.0"
clap = { version = "3.1.8", features = ["cargo"] }
crossterm = { version = "0.23.2", features = ["event-stream"] }
flexi_logger = "0.22.3"
futures = { version = "0.3.21" }
indexmap = { version = "1.8.0", features = ["serde"] }
libc = "0.2.120"
log = "0.4.14"
portable-pty = "0.7.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.79", features = ["preserve_order"] }
tokio = { version = "1", features = ["full"] }
triggered = "0.1.2"
tui = "0.18.0"
unicode-width = "0.1.9"
vt100 = "0.15.1"

[patch.crates-io]
vt100 = { path = "vendor/vt100" }
