[profile.release]
strip = "symbols"
opt-level = "z"   # optimize for binary size
lto = true        # link time optimization
panic = "abort"
codegen-units = 1

[profile.dist]
inherits = "release"
lto = "thin"

[workspace]
resolver = "2"
default-members = ["src"]
members = ["helpers/print-key", "src"]
