[package]
name = "tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
path = "lib.rs"

[dependencies]
crossterm = "*"
ocaml = "0.22.0"
tui = { version = "*", default-features = false, features = ['crossterm'] }
