[package]
name = "tui"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["staticlib"]
path = "lib.rs"

[dependencies]
crossterm = "0.20"
tui = { version = "*", default-features = false, features = ['crossterm'] }
lazy_static = "1.4.0"
libc = "0.2.104"
