(data_only_dirs libvterm)

(library
 (name vterm)
 (foreign_stubs
  (language c)
  (names bindings)
  (include_dirs libvterm/include))
 (foreign_archives vterm))

(rule
 (deps
  (source_tree libvterm))
 (targets libvterm.a)
 (action
  (no-infer
   (progn
    (chdir
     libvterm
     (run make lib/libvterm.a))
    (copy libvterm/lib/libvterm.a libvterm.a)))))
