(executable
 (name types_c_gen)
 (modules types_bindings types_c_gen)
 (libraries ctypes ctypes.stubs))

(rule
 (targets types_stubs_gen.c)
 (deps types_c_gen.exe)
 (action
  (run %{deps})))

(rule
 (action
  (copy# ../tui_rs.h tui_rs.h)))

(rule
 (targets types_stubs_gen)
 (deps
  types.h
  (:c_code types_stubs_gen.c))
 (action
  (run
   %{ocaml-config:c_compiler}
   -I
   %{lib:ctypes:}
   -I
   %{ocaml-config:standard_library}
   -o
   %{targets}
   %{c_code})))

(rule
 (targets types_stubs.ml)
 (deps
  (:gen types_stubs_gen))
 (action
  (with-stdout-to
   %{targets}
   (system "./%{gen}"))))
